name:                www-doc
version:             0.0.1
synopsis:            Write Web apps in word
homepage:            https://github.com/yourName/repoName
license:             MIT
author:              Neil
maintainer:          you@email.com
category:            Web
build-type:          Simple
cabal-version:       >=1.8

executable www-doc
  main-is:             service.hs
  -- other-modules:       
  build-depends:       base ==4.8.*
                     , split
                     , pandoc
                     , scotty
                     , data-default
                     , bytestring
                     , pandoc-types
                     , transformers
                     , random
                     , wai-extra
